// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DeleteServerButton /> > renders expected content 1`] = `
<button
  class="p-0 bg-transparent border-0"
  type="button"
>
  <span
    class="button"
  >
    Foo bar
  </span>
</button>
`;

exports[`<DeleteServerButton /> > renders expected content 2`] = `
<button
  class="p-0 bg-transparent border-0"
  type="button"
>
  <span
    class="button"
  >
    baz
  </span>
</button>
`;

exports[`<DeleteServerButton /> > renders expected content 3`] = `
<button
  class="p-0 bg-transparent border-0"
  type="button"
>
  <span
    class="button"
  >
    something
  </span>
</button>
`;

exports[`<DeleteServerButton /> > renders expected content 4`] = `
<button
  class="p-0 bg-transparent border-0"
  type="button"
>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-circle-minus fa-fw "
    data-icon="circle-minus"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM184 232H328c13.3 0 24 10.7 24 24s-10.7 24-24 24H184c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
      fill="currentColor"
    />
  </svg>
  <span
    class="button"
  >
    Remove this server
  </span>
</button>
`;
